# Connect4Neat

./: Cargo.toml  README.md
assets/: drawing.excalidraw
game_api/: Cargo.toml
game_api/src/: game.rs  grid.rs  main.rs  mouse.rs  plugins.rs
proptest-regressions/: board.txt  tile_map.txt
round_api/: Cargo.toml
round_api/src/: board.rs  lib.rs  piece.rs  player.rs
round_api/src/game/: game.rs  mod.rs  play.rs  player_interaction.rs  start.rs
round_api/src/player_agent/: agent.rs  mod.rs  rand_agent.rs  user_agent.rs
src/: board.rs  game.rs  main.rs  piece.rs  player.rs
